--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,17 @@ body
 #cy
 {
   height: 100%;
-  width: 100%;
+  width: 80%;
   position: absolute;
   left: 0;
   top: 0;
+}
+
+#sidebar
+{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 200px;
+    height: 100%;
 }
