--- a/css/style.css
+++ b/css/style.css
@@ -20,3 +20,33 @@ body
     width: 200px;
     height: 100%;
 }
+
+#sir
+{
+  height: 200px;
+  width: 90%;
+  border: 2px solid black;
+}
+
+.sir
+{
+  width: 100%;
+  height: 0;
+  overflow: hidden;
+  color: white;
+}
+
+#sir-susceptible
+{
+  background-color: blue;
+}
+
+#sir-infected
+{
+  background-color: red;
+}
+
+#sir-dead
+{
+  background-color: black;
+}
